packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/raw-type/RawOptionalCase.java
package sample.bad;

import java.util.Optional;

class RawOptionalCase {
    private Optional value;
}
